Enhances fix for mobile nav dark mode bug Changes light-theme css file to append to head instead of prepend Update background styling to make mobile nav readable

--- a/assets/scss/light-theme.scss
+++ b/assets/scss/light-theme.scss
@@ -5,6 +5,14 @@ body {
    background-color: white !important;
    color: #61717d !important;
 }
+
+nav {
+    &.isOpen {
+        > .container {
+            background-color: white !important;
+        }
+    }
+}
  body .navbar-dark .navbar-brand .navbar-logo svg .cls-1 {
    fill: #717074 !important;
 }
@@ -150,7 +158,7 @@ body a.btn {
    body .td-navbar .td-navbar-nav-hamburger .navbar-nav a[href*='/'] {
       color: #1d428a !important;
    }
-   body .td-navbar .td-navbar-nav-hamburger #menu-toggle #menu-close .a {
+   body .td-navbar #menu-toggle #menu-close .a {
       stroke: #61717d !important;
    }
 }
@@ -255,6 +263,11 @@ body.tv-episode #register .mktoForm select {
   box-shadow: none !important;
   background-color: white !important;
 }
+
+#mobile-nav {
+    background-color: white !important;
+}
+
 nav #theme-select {
   background-color: #ADBBC4 !important;
   
